# bigquery-storage

./: Cargo.toml  README.md  build.rs
src/: client.rs  lib.rs
