[package]
name = "bigquery-storage"
version = "0.1.2"
authors = ["damien <damien@openquery.io>"]
description = "A small wrapper around the Google BigQuery Storage API"
keywords = ["google", "bigquery", "storage"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/openquery-io/bigquery-storage"
readme = "README.md"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"

[dependencies]
tonic = { version = "0.8", features = ["transport", "tls", "tls-roots"] }
prost = "0.11"
prost-types = "0.11"
